@@ -7,29 +7,21 @@
   <parent>
     <groupId>io.dapr</groupId>
     <artifactId>dapr-sdk-parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>dapr-sdk</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.4.0-SNAPSHOT</version>
   <name>dapr-sdk</name>
   <description>SDK for Dapr</description>
-  
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>jcenter</id>
-      <name>jcenter</name>
-      <url>https://jcenter.bintray.com/</url>
-    </repository>
-  </repositories>
 
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
     <grpc.version>1.39.0</grpc.version>
+    <argLine>
+      --add-opens java.base/java.util=ALL-UNNAMED
+    </argLine>
   </properties>
 
   <dependencies>
@@ -78,7 +70,7 @@
     <dependency>
       <groupId>com.github.gmazzo</groupId>
       <artifactId>okhttp-mock</artifactId>
-      <version>1.3.2</version>
+      <version>1.4.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -175,11 +167,12 @@
                    <limit>
                       <counter>LINE</counter>
                       <value>COVEREDRATIO</value>
-                      <minimum>80%</minimum>
+                      <!--TODO Switch back coverage on removing the deprecated builder code-->
+                      <minimum>79%</minimum>
                     </limit>
                   </limits>
                   <excludes>
-                    <exclude>io.dapr.utils.Constants</exclude>
+                    <exclude>**/io/dapr/client/domain/**/*Builder.java</exclude>
                   </excludes>
                 </rule>
               </rules>
